--- a/TypingHelper/TypingHelper.vcxproj
+++ b/TypingHelper/TypingHelper.vcxproj
@@ -90,6 +90,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ConfigFile.cpp" />
     <ClCompile Include="converter.cpp" />
     <ClCompile Include="logger.c" />
     <ClCompile Include="backend.cpp" />
@@ -100,6 +101,8 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\settingstest\global.h" />
+    <ClInclude Include="ConfigFile.h" />
     <ClInclude Include="global.h" />
     <ClInclude Include="logger.h" />
     <ClInclude Include="backend.h" />
