--- a/QtQuickApplication2/QtQuickApplication2.vcxproj.filters
+++ b/QtQuickApplication2/QtQuickApplication2.vcxproj.filters
@@ -29,10 +29,7 @@
     <QtRcc Include="qml.qrc">
       <Filter>Resource Files</Filter>
     </QtRcc>
-    <None Include="main.qml">
-      <Filter>Source Files</Filter>
-    </None>
-    <ClCompile Include="backend.cpp">
+    <ClCompile Include="lang.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ConfigFile.cpp">
@@ -44,12 +41,22 @@
     <ClCompile Include="logger.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="loggerwrapper.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="lang.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="Lang.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="Backend.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="main.qml">
+      <Filter>Form Files</Filter>
+    </None>
+    <None Include="qtquickcontrols2.conf">
+      <Filter>Form Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConfigFile.h">
@@ -61,10 +68,8 @@
     <ClInclude Include="logger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <QtMoc Include="backend.h">
+    <ClInclude Include="Converter.h">
       <Filter>Header Files</Filter>
-    </QtMoc>
+    </ClInclude>
   </ItemGroup>
 </Project>
