--- a/JTH/JTH.vcxproj.filters
+++ b/JTH/JTH.vcxproj.filters
@@ -44,12 +44,12 @@
     <ClCompile Include="ConfigUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TypingGame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Backend.h">
-      <Filter>Header Files</Filter>
-    </QtMoc>
-    <QtMoc Include="Lang.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
@@ -64,6 +64,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ConfigUtil.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TypingGame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Lang.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
